minor changes to index/sponsor pages & margins

--- a/views/index.erb
+++ b/views/index.erb
@@ -62,24 +62,24 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.intuit.com/">
-      <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
+      <img src="img/sponsors/intuit.png" height="80" alt="Intuit">
     </a>
 
     <a href="http://www.meraki.com">
-      <img src="img/sponsors/meraki.png" height="80" alt="Meraki">
+      <img src="img/sponsors/meraki.png" height="80" alt="Cisco Meraki">
     </a>
-    
+
     <a href="http://www.airbnb.com">
       <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
     </a>
   </div>
-  
+
   <h3>Silver</h3>
   <div class="logos sponsors">
     <a href="http://www.lyft.com">
-      <img height="80" src="img/sponsors/lyft.png" alt="Lyft">
+      <img src="img/sponsors/lyft.png" height="80" alt="Lyft">
     </a>
-    
+
     <a href="http://www.google.com">
       <img src="img/sponsors/google.png" height="60" alt="Google">
     </a>
@@ -88,7 +88,7 @@
   <h3>Bronze</h3>
   <div class="logos sponsors">
     <a href="http://www.cmc.edu/silicon-valley-program">
-      <img src="img/sponsors/svp.jpg" height="60" alt="Silicon Valley Program">
+      <img src="img/sponsors/svp.png" height="60" alt="Silicon Valley Program">
     </a>
   </div>
 
@@ -97,7 +97,7 @@
     <a href="http://www.microsoft.com">
       <img src="img/sponsors/microsoft.png" height="30" alt="Silicon Valley Program">
     </a>
-    
+
     <a href="http://www.wolfram.com/index.php">
       <img src="img/sponsors/wolfram.png" height="70" alt="Wolfram Alpha">
     </a>
@@ -107,81 +107,81 @@
 </section>
 <section class="team" id="team">
   <div class="layout--page">
-    <h1 style="color: #fff">The Planning Committee</h1>
+    <h1 style="color: #fff;">The Planning Committee</h1>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/ryan.png)">
+        <div class="speaker__img" style="background-image: url(img/team/ryan.png);">
         </div>
         <div class="speaker__social">
         </div>
       </div>
-      <div class="speaker__name" style="color: #fff">
+      <div class="speaker__name" style="color: #fff;">
         Ryan Luo
       </div>
-      <div class="speaker__title" style="color: #fff">
+      <div class="speaker__title" style="color: #fff;">
         Senior
       </div>
-      <div class="speaker__company" style="color: #fff">
+      <div class="speaker__company" style="color: #fff;">
         Pomona College
       </div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/aloke.png)">
+        <div class="speaker__img" style="background-image: url(img/team/aloke.png);">
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
         Aloke Desai
       </div>
-      <div class="speaker__title" style="color: #fff">
+      <div class="speaker__title" style="color: #fff;">
         Senior
       </div>
-      <div class="speaker__company" style="color: #fff">
+      <div class="speaker__company" style="color: #fff;">
         Pomona College
       </div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/maureen.png)">
+        <div class="speaker__img" style="background-image: url(img/team/maureen.png);">
         </div>
       </div>
-      <div class="speaker__name" style="color:#fff">
+      <div class="speaker__name" style="color:#fff;">
         Maureen Naval
       </div>
-      <div class="speaker__title" style="color: #fff">
+      <div class="speaker__title" style="color: #fff;">
         Junior
       </div>
-      <div class="speaker__company" style="color: #fff">
+      <div class="speaker__company" style="color: #fff;">
         Pitzer College
       </div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/lucas.png)">
+        <div class="speaker__img" style="background-image: url(img/team/lucas.png);">
         </div>
       </div>
-      <div class="speaker__name" style="color:#fff">
+      <div class="speaker__name" style="color:#fff;">
         Lucas Dos Santos
       </div>
-      <div class="speaker__title" style="color: #fff">
+      <div class="speaker__title" style="color: #fff;">
         Junior
       </div>
-      <div class="speaker__company" style="color: #fff">
+      <div class="speaker__company" style="color: #fff;">
         Pomona College
       </div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/zach.jpg)">
+        <div class="speaker__img" style="background-image: url(img/team/zach.jpg);">
         </div>
       </div>
-      <div class="speaker__name" style="color:#fff">
+      <div class="speaker__name" style="color:#fff;">
         Zach Hauser
       </div>
-      <div class="speaker__title" style="color: #fff">
+      <div class="speaker__title" style="color: #fff;">
         Junior
       </div>
-      <div class="speaker__company" style="color: #fff">
+      <div class="speaker__company" style="color: #fff;">
         Pomona College
       </div>
     </div>
@@ -191,7 +191,7 @@
 <section class="coc" id="coc">
   <div class="layout--page">
     <h1>Code of Conduct</h1>
-    <div style="margin-bottom: 20px;">
+    <div style="margin-bottom: 25px;">
       We value the participation of each individual and want to provide a positive experience for everyone. Accordingly, all attendees are expected to show respect and courtesy to other attendees. To make clear what is expected, all attendees, speakers, and volunteers are required to follow our Code of Conduct, which will be strictly enforced as deemed necessary.
     </div>
     <div class="row">
@@ -200,14 +200,14 @@
           <h4 class="session__title">Be Respectful</h4>
           <div class="session__desc">
             <p>Be kind to others. Do not insult or put down other attendees. Behave professionally. Remember that harassment and racist, sexist, or exclusionary jokes or project content are not appropriate for this event and will not be tolerated.</p>
-            <p> Harassment includes but is not limited to offensive verbal comments related to gender, sexual orientation, disability, physical appearance, race, or religion; sexual images in public spaces; deliberate intimidation; unwelcome photography or recording; inappropriate physical contact; and unwelcome sexual attention. </p>
+            <p> Harassment includes but is not limited to: offensive verbal comments related to gender, sexual orientation, disability, physical appearance, race, or religion; sexual images in public spaces; deliberate intimidation; unwelcome photography or recording; inappropriate physical contact; and unwelcome sexual attention. </p>
           </div>
           <b class="marker"></b>
         </div>
         <div class="session">
           <h4 class="session__title">Be Open</h4>
           <div class="session__desc">
-            <p>We welcome attendees from all backgrounds and skill levels - from “never been to hackathon before” to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
+            <p>We welcome attendees from all backgrounds and skill levels &ndash; from “never been to hackathon before” to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
           </div>
           <b class="marker"></b>
         </div>
@@ -227,14 +227,14 @@
 <section class="hack-week" id="hack-week">
   <div class="layout--page">
     <h1>Hack Week</h1>
-    <h2 style="color: #00467f">Hack Week is a weeklong tutorial that teaches you how to build a webapp with <span class="venue__highlight">little to no programming experience</span>.</h2>
-    <div style="text-align: center; margin-bottom: 20px;" >
+    <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong tutorial that teaches you how to build a webapp with <span class="venue__highlight">little to no programming experience</span>.</h2>
+    <div class="desc">
       <h3>When</h3>
-      <p>Hack Week is every evening from 7-9 pm starting the Monday before the hackathon and culminating in the 5C Hackathon on Friday.</p>
+      <p>Hack Week is every evening from 7&ndash;9 p.m. starting the Monday before the hackathon and culminating in the 5C Hackathon on Friday.</p>
       <h3>What</h3>
-      <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last fall we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with NodeJS, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
+      <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last spring we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with NodeJS, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
       <h3>Code</h3>
-      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5chackathon">Github</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
+      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5chackathon">GitHub</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
     </div>
   </div>
 </section>
