--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -3,11 +3,11 @@
   <div class="sponsor-info" style="background-color: #f6fbfc">
     <div class="layout--page">
       <h1>Become a Sponsor</h1>
-      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle Github accounts.</p>
+      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle GitHub accounts.</p>
       <p class="sponsor__info">An entirely student-run event, the 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from five different schools: Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer.</p>
       <h2 class="no-margin-top dark-blue">What Makes 5C Hackathon Different?</h2>
       <p class="sponsor__info">
-        We pride ourselves on building a technical community at the Claremont Colleges that is inclusive, creative, and diverse. With that in mind, we focus on making the 5C Hackathon a <span class="bold-blue">beginner-friendly hackathon</span>. Last semester, <span class="bold-blue">56% of our attendees were female, and 51% were first-time hackers</span>. 
+        We pride ourselves on building a technical community at the Claremont Colleges that is inclusive, creative, and diverse. With that in mind, we focus on making the 5C Hackathon a <span class="bold-blue">beginner-friendly hackathon</span>. Last semester, <span class="bold-blue">56% of our attendees were female, and 51% were first-time hackers</span>.
       </p>
       <p class="sponsor__info">
         Teaching and mentorship is of the utmost importance to us. Each semester we have week-long classes that teach beginners the basics of how to code so that they can compete in hackathon. In the past, we've taught beginners how to make mobile apps using PhoneGap, web apps using Node.JS, and how to use a database using MongoDB. We also have mentors throughout the night who are always available to help teams.
@@ -17,7 +17,7 @@
         Sponsoring is a great way to connect with some of the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 of students, <span class="bold-blue">showcase your API or product</span> and see students make awesome hacks with them, and get beginners excited about programming by mentoring them.
       </p>
       <p class="sponsor__info">
-        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a> , and we'll work out the details.</p>
+        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a>, and we'll work out the details.</p>
     </div>
   </div>
   </section>
@@ -34,12 +34,12 @@
               <h3 class="panel-title price">$1000</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item">Swag Distribution</li>
+              <li class="list-group-item">Swag distribution</li>
               <li class="list-group-item">API or developer tools featured on the event website, if applicable</li>
               <li class="list-group-item">Organization name, logo, and bio on the event website</li>
               <li class="list-group-item">Opportunity to send one recruiter/company representative</li>
             </ul>
-          </div>          
+          </div>
         </div>
         <div class="col-sm-3">
           <div class="panel panel-default text-center">
@@ -54,7 +54,7 @@
               <li class="list-group-item">'A few words from our sponsor' at the hackathon kickoff</li>
               <li class="list-group-item">Placement of logo on official event T-shirts</li>
             </ul>
-          </div>          
+          </div>
         </div>
         <div class="col-sm-3">
           <div class="panel panel-primary text-center">
@@ -69,7 +69,7 @@
               <li class="list-group-item">Post-event access to participant resume database</li>
               <li class="list-group-item">Brief paragraph about company on the event website</li>
             </ul>
-          </div>          
+          </div>
         </div>
         <div class="col-sm-3">
           <div class="panel panel-default text-center">
@@ -82,11 +82,11 @@
             </div>
             <ul class="list-group">
               <li class="list-group-item"><strong>Everything in Gold</strong></li>
-              <li class="list-group-item">The 5C Hackathon, presented by...</li>
+              <li class="list-group-item">The 5C Hackathon, presented by&hellip;</li>
               <li class="list-group-item">Special placement of logo in all event flyers, posters, e-mails, and slides</li>
               <li class="list-group-item">Special placement of logo on official event T-shirts</li>
             </ul>
-          </div>          
+          </div>
         </div>
     </div>
   </section>
