fixed blue pictures

--- a/views/index.erb
+++ b/views/index.erb
@@ -172,7 +172,7 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/zach.jpg);">
+        <div class="speaker__img" style="background-image: url(img/team/zach.png);">
         </div>
       </div>
       <div class="speaker__name" style="color:#fff;">
