added Laserfiche logo

--- a/views/index.erb
+++ b/views/index.erb
@@ -65,22 +65,22 @@
       <img src="img/sponsors/intuit.png" height="80" alt="Intuit">
     </a>
 
-    <a href="http://www.meraki.com">
+    <a href="http://www.meraki.com/">
       <img src="img/sponsors/meraki.png" height="70" alt="Cisco Meraki">
     </a>
 
-    <a href="http://www.airbnb.com">
+    <a href="http://www.airbnb.com/">
       <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
     </a>
   </div>
 
   <h3>Silver</h3>
   <div class="logos sponsors">
-    <a href="http://www.lyft.com">
+    <a href="http://www.lyft.com/">
       <img src="img/sponsors/lyft.png" height="70" alt="Lyft">
     </a>
 
-    <a href="http://www.google.com">
+    <a href="http://www.google.com/">
       <img src="img/sponsors/google.png" height="60" alt="Google">
     </a>
   </div>
@@ -88,7 +88,11 @@
   <h3>Bronze</h3>
   <div class="logos sponsors">
     <a href="http://www.cmc.edu/silicon-valley-program">
-      <img src="img/sponsors/svp.png" height="60" alt="Silicon Valley Program">
+      <img src="img/sponsors/svp.png" height="50" alt="Silicon Valley Program">
+    </a>
+
+    <a href="http://laserfiche.com/">
+      <img src="img/sponsors/laserfiche.png" height="50" alt="Laserfiche">
     </a>
   </div>
 
