update dates to April 15

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
   <div class="banner">
     <img class="banner__img" src="img/background-thin.png" alt="5C Hackathon">
     <span class="banner__main">5C Hackathon</span>
-    <span class="banner__date">NOV 13, 2015 &nbsp; &nbsp; Claremont, CA</span>
+    <span class="banner__date">APR 15, 2016 &nbsp; &nbsp; Claremont, CA</span>
   </div>
   <div class="intro">
     <div class="layout--page">
@@ -19,7 +19,7 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <caption>Fall 2015 Schedule</caption>
+    <caption>Spring 2016 Schedule</caption>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
@@ -57,8 +57,8 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Fall 2015 Sponsors</h1>
-  <p>Interesting in sponsoring the Fall 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <h1>The Spring 2016 Sponsors</h1>
+  <p>Interesting in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.intuit.com/">
