update text that spring 2016 sponsors are coming soon

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,8 +57,9 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Spring 2016 Sponsors</h1>
-  <p>Interesting in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <h1>The Fall 2015 Sponsors</h1>
+
+  <p>Spring 2016 sponsors are coming soon. Interesting in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.intuit.com/">
