--- a/views/index.erb
+++ b/views/index.erb
@@ -59,7 +59,7 @@
 <div class="layout--page">
   <h1>The Fall 2015 Sponsors</h1>
 
-  <p>Spring 2016 sponsors are coming soon. Interesting in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>Spring 2016 sponsors are coming soon. Interested in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.intuit.com/">
