--- a/views/index.erb
+++ b/views/index.erb
@@ -12,7 +12,7 @@
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 12-hour event.
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
-      <a href="" class="intro__reg reg"><span class="nowrap">Register Now!</a>
+      <a href="https://www.eventbrite.com/e/5chackathon-spring-2016-presented-by-proofpoint-tickets-24380785586" class="intro__reg reg"><span class="nowrap">Register Now!</a>
     </div>
   </div>
 </section>
