--- a/views/index.erb
+++ b/views/index.erb
@@ -57,28 +57,24 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Fall 2015 Sponsors</h1>
+  <h1>The Spring 2016 Sponsors</h1>
 
-  <p>Spring 2016 sponsors are coming soon. Interested in sponsoring the Spring 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>Interested in sponsoring the Spring 2017 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <h3>Platinum</h3>
+  <div class="logos sponsors">
+    <a href="http://www.proofpoint.com/">
+      <img src="img/sponsors/proofpoint.jpg" alt="Proofpoint" height="150"/>
+    </a>
+  </div>
+
   <h3>Gold</h3>
   <div class="logos sponsors">
     <a href="http://www.intuit.com/">
-      <img src="img/sponsors/intuit.png" height="80" alt="Intuit">
+      <img src="img/sponsors/intuit.png" height="60" alt="Intuit">
     </a>
 
     <a href="http://www.meraki.com/">
       <img src="img/sponsors/meraki.png" height="70" alt="Cisco Meraki">
-    </a>
-
-    <a href="http://www.airbnb.com/">
-      <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
-    </a>
-  </div>
-
-  <h3>Silver</h3>
-  <div class="logos sponsors">
-    <a href="http://www.lyft.com/">
-      <img src="img/sponsors/lyft.png" height="70" alt="Lyft">
     </a>
 
     <a href="http://www.google.com/">
@@ -88,26 +84,14 @@
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <a href="http://www.cmc.edu/silicon-valley-program">
-      <img src="img/sponsors/svp.png" height="50" alt="Silicon Valley Program">
+    <a href="http://www.yelp.com">
+      <img src="img/sponsors/yelp.png" height="90" alt="Yelp">
     </a>
 
     <a href="http://laserfiche.com/">
       <img src="img/sponsors/laserfiche.png" height="50" alt="Laserfiche">
     </a>
   </div>
-
-  <h3>Supporters</h3>
-  <div class="logos sponsors">
-    <a href="http://www.microsoft.com">
-      <img src="img/sponsors/microsoft.png" height="30" alt="Silicon Valley Program">
-    </a>
-
-    <a href="http://www.wolfram.com/index.php">
-      <img src="img/sponsors/wolfram.png" height="70" alt="Wolfram Alpha">
-    </a>
-  </div>
-
 
 </section>
 <section class="team" id="team">
