fix typo about date

--- a/views/index.erb
+++ b/views/index.erb
@@ -59,7 +59,7 @@
 <div class="layout--page">
   <h1>The Spring 2016 Sponsors</h1>
 
-  <p>Interested in sponsoring the Spring 2017 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>Interested in sponsoring the Fall 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Platinum</h3>
   <div class="logos sponsors">
     <a href="http://www.proofpoint.com/">
