--- a/views/index.erb
+++ b/views/index.erb
@@ -29,8 +29,8 @@
       <td>Hacking begins</td>
     </tr>
     <tr>
-      <td class="session__time">11:00 PM</td>
-      <td>Food truck rolls in</td>
+      <td class="session__time">10:00 PM</td>
+      <td>Chipotle is served</td>
     </tr>
     <tr>
       <td class="session__time">3:00 AM</td>
@@ -45,8 +45,8 @@
       <td>Crunch time</td>
     </tr>
     <tr>
-      <td class="session__time">8:00 AM</td>
-      <td>Presentation and prizes</td>
+      <td class="session__time">7:00 AM</td>
+      <td>Expo Presentation</td>
     </tr>
     <tr>
       <td class="session__time">10:00 AM</td>
