updating site in preparation for fall 2016 hackathon

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,23 +3,23 @@
   <div class="banner">
     <img class="banner__img" src="img/background-thin.png" alt="5C Hackathon">
     <span class="banner__main">5C Hackathon</span>
-    <span class="banner__date">APR 15, 2016 &nbsp; &nbsp; Claremont, CA</span>
+    <span class="banner__date">November 11, 2016 &nbsp; &nbsp; Claremont, CA</span>
   </div>
   <div class="intro">
     <div class="layout--page">
-      <h1>A Hackathon Like No Other</h1>
+      <h1 class="tag">A Hackathon Like No Other.</h1>
       <p class="intro__desc">
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 12-hour event.
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
-      <a href="https://www.eventbrite.com/e/5chackathon-spring-2016-presented-by-proofpoint-tickets-24380785586" class="intro__reg reg"><span class="nowrap">Register Now!</a>
+      <a style="cursor: pointer;" class="reg intro__reg"><span class="nowrap mainbutton">REGISTER NOW!</span></a>
     </div>
   </div>
 </section>
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <caption>Spring 2016 Schedule</caption>
+    <caption>Fall 2016 Schedule</caption>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
@@ -57,122 +57,79 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Spring 2016 Sponsors</h1>
+  <h1>Sponsors</h1>
 
-  <p>Interested in sponsoring the Fall 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>
+    <h5 style="color: #000;">
+      Interested in sponsoring the Fall 2016 Hackathon? Click <a href="/sponsor">here</a> for more information.
+    </h5>
+  </p>
+
   <h3>Platinum</h3>
   <div class="logos sponsors">
-    <a href="http://www.proofpoint.com/">
-      <img src="img/sponsors/proofpoint.jpg" alt="Proofpoint" height="150"/>
-    </a>
+    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.jpg" alt="Proofpoint" style="height: 130px; width: auto;"/></a>
   </div>
 
   <h3>Gold</h3>
   <div class="logos sponsors">
-    <a href="http://www.intuit.com/">
-      <img src="img/sponsors/intuit.png" height="60" alt="Intuit">
-    </a>
+    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="65" alt="Intuit"></a>
 
-    <a href="http://www.meraki.com/">
-      <img src="img/sponsors/meraki.png" height="70" alt="Cisco Meraki">
-    </a>
-
-    <a href="http://www.google.com/">
-      <img src="img/sponsors/google.png" height="60" alt="Google">
-    </a>
+    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="85" alt="Google"></a>
   </div>
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <a href="http://www.yelp.com">
-      <img src="img/sponsors/yelp.png" height="90" alt="Yelp">
-    </a>
+    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="45" alt="Andreessen Horowitz"></a>
 
-    <a href="http://laserfiche.com/">
-      <img src="img/sponsors/laserfiche.png" height="50" alt="Laserfiche">
-    </a>
+    <a href="http://laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
   </div>
-
 </section>
+
 <section class="team" id="team">
   <div class="layout--page">
     <h1 style="color: #fff;">The Planning Committee</h1>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/ryan.png);">
-        </div>
-        <div class="speaker__social">
-        </div>
+        <div class="speaker__img" style="background-image: url(img/team/lucas.png);"></div>
       </div>
-      <div class="speaker__name" style="color: #fff;">
-        Ryan Luo
-      </div>
-      <div class="speaker__title" style="color: #fff;">
-        Senior
-      </div>
-      <div class="speaker__company" style="color: #fff;">
-        Pomona College
-      </div>
+      <div class="speaker__name" style="color:#fff;">Lucas Dos Santos</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
+      <!-- <div class="speaker__company" style="color: #fff;"></div> -->
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/aloke.png);">
-        </div>
+        <div class="speaker__img" style="background-image: url(img/team/eli.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff">
-        Aloke Desai
-      </div>
-      <div class="speaker__title" style="color: #fff;">
-        Senior
-      </div>
-      <div class="speaker__company" style="color: #fff;">
-        Pomona College
-      </div>
+      <div class="speaker__name" style="color:#fff">Eli Fessler</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/maureen.png);">
-        </div>
+        <div class="speaker__img" style="background-image: url(img/team/gloria.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff;">
-        Maureen Naval
-      </div>
-      <div class="speaker__title" style="color: #fff;">
-        Junior
-      </div>
-      <div class="speaker__company" style="color: #fff;">
-        Pitzer College
-      </div>
+      <div class="speaker__name" style="color:#fff">Gloria Liou</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/lucas.png);">
-        </div>
+        <div class="speaker__img" style="background-image: url(img/team/ross.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff;">
-        Lucas Dos Santos
-      </div>
-      <div class="speaker__title" style="color: #fff;">
-        Junior
-      </div>
-      <div class="speaker__company" style="color: #fff;">
-        Pomona College
-      </div>
+      <div class="speaker__name" style="color:#fff">Ross Wollman</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/zach.png);">
-        </div>
+        <div class="speaker__img" style="background-image: url(img/team/zach.png);"></div>
       </div>
-      <div class="speaker__name" style="color:#fff;">
-        Zach Hauser
+      <div class="speaker__name" style="color:#fff;">Zach Hauser</div>
+      <div class="speaker__title" style="color: #fff;">Senior</div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/erinna.png);"></div>
       </div>
-      <div class="speaker__title" style="color: #fff;">
-        Junior
-      </div>
-      <div class="speaker__company" style="color: #fff;">
-        Pomona College
-      </div>
+      <div class="speaker__name" style="color:#fff;">Erinna Woo</div>
+      <div class="speaker__title" style="color: #fff;">Junior</div>
     </div>
   </div>
 </section>
@@ -196,7 +153,7 @@
         <div class="session">
           <h4 class="session__title">Be Open</h4>
           <div class="session__desc">
-            <p>We welcome attendees from all backgrounds and skill levels &ndash; from “never been to hackathon before” to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
+            <p>We welcome attendees from all backgrounds and skill levels &ndash; from &ldquo;never been to hackathon before&rdquo; to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
           </div>
           <b class="marker"></b>
         </div>
@@ -216,14 +173,14 @@
 <section class="hack-week" id="hack-week">
   <div class="layout--page">
     <h1>Hack Week</h1>
-    <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong tutorial that teaches you how to build a webapp with <span class="venue__highlight">little to no programming experience</span>.</h2>
+    <h2 style="color: #00467f; margin: -.5em 0 .25em;">Hack Week is a weeklong tutorial that teaches you how to build a web app with little to no programming experience.</h2>
     <div class="desc">
       <h3>When</h3>
-      <p>Hack Week is every evening from 7&ndash;9 p.m. starting the Monday before the hackathon and culminating in the 5C Hackathon on Friday.</p>
+      <p>Hack Week is every evening from 7&ndash;9 p.m. starting the Monday before the Hackathon and culminating in the 5C Hackathon on Friday.</p>
       <h3>What</h3>
-      <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last spring we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with NodeJS, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
+      <p>Hack Week has both a beginner and advanced section that teaches you how to build a dynamic web application. Last spring we covered basic HTML/CSS, front-end interactions with JavaScript and jQuery, web servers with Node.js, sleek and easy design with Bootstrap, and databases with MongoDB.</p>
       <h3>Code</h3>
-      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5chackathon">GitHub</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
+      <p>Check out the apps from this year and previous years at our <a href="http://github.com/5CHackathon">GitHub</a> page. During Hack Week, the starter code for each day will also be uploaded here.</p>
     </div>
   </div>
 </section>
