--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -1,30 +1,40 @@
 <% @title= "5C Hackathon | Sponsor" %>
 <section>
-  <div class="sponsor-info" style="background-color: #f6fbfc">
+  <div class="sponsor-info" style="background-color: #f6fbfc; padding-bottom: 20px;">
     <div class="layout--page">
+
       <h1>Become a Sponsor</h1>
+
       <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle GitHub accounts.</p>
       <p class="sponsor__info">An entirely student-run event, the 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from five different schools: Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer.</p>
-      <h2 class="no-margin-top dark-blue">What Makes 5C Hackathon Different?</h2>
+
+
+      <h2 class="no-margin-top dark-blue">What Makes the 5C Hackathon Different?</h2>
+
       <p class="sponsor__info">
         We pride ourselves on building a technical community at the Claremont Colleges that is inclusive, creative, and diverse. With that in mind, we focus on making the 5C Hackathon a <span class="bold-blue">beginner-friendly hackathon</span>. Last semester, <span class="bold-blue">56% of our attendees were female, and 51% were first-time hackers</span>.
       </p>
+
       <p class="sponsor__info">
-        Teaching and mentorship is of the utmost importance to us. Each semester we have week-long classes that teach beginners the basics of how to code so that they can compete in hackathon. In the past, we've taught beginners how to make mobile apps using PhoneGap, web apps using Node.JS, and how to use a database using MongoDB. We also have mentors throughout the night who are always available to help teams.
+        Teaching and mentorship is of the utmost importance to us. Each semester we host sessions in the week leading up to the event that teach beginners the basics of how to code, enabling to atendees to compete in the 5C Hackathon. In the past, we've taught beginners how to make mobile apps using PhoneGap, web apps using Node.js, and how to use a database using MongoDB. We also have mentors throughout the night who are always available to help teams.
       </p>
+
+
       <h2 class="no-margin-top dark-blue">Why Sponsor?</h2>
+
       <p class="sponsor__info">
-        Sponsoring is a great way to connect with some of the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 of students, <span class="bold-blue">showcase your API or product</span> and see students make awesome hacks with them, and get beginners excited about programming by mentoring them.
+        Sponsoring is a great way to connect with the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 of students, <span class="bold-blue">showcase your API or product</span> and see students make awesome projects with them, and get beginners excited about programming by mentoring them.
       </p>
+
       <p class="sponsor__info">
         Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a>, and we'll work out the details.</p>
     </div>
   </div>
   </section>
 
-  <section class="sponsorship" id="sponsorship">
+  <section class="sponsorship" id="sponsorship" style="margin-top: -2.25em; margin-bottom: .5em;">
     <div class="layout--page">
-      <h2 class="dark-blue">Sponsorship Tiers</h2>
+      <h2 class="dark-blue" style="margin-bottom: 1em;">Sponsorship Tiers</h2>
         <div class="col-sm-3">
           <div class="panel panel-default text-center">
             <div class="panel-heading">
@@ -51,7 +61,7 @@
             </div>
             <ul class="list-group">
               <li class="list-group-item"><strong>Everything in Bronze</strong></li>
-              <li class="list-group-item">'A few words from our sponsor' at the hackathon kickoff</li>
+              <li class="list-group-item">'A few words from our sponsor' at the Hackathon kickoff</li>
               <li class="list-group-item">Placement of logo on official event T-shirts</li>
             </ul>
           </div>
