--- a/public/styles.css
+++ b/public/styles.css
@@ -19,16 +19,24 @@ body {
 h1, .h1 {
   margin: 0 0 .5em;
   font-weight: 300;
-  font-size: 2.35294em;
+  font-size: 2em;
   letter-spacing: -1px;
   color: #00467f;
   line-height: 1.22222em;
   text-align: center;
 }
+h1.tag {
+  margin-top: -0.5em;
+  margin-bottom: 0.5em;
+}
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   h1, .h1 {
-    font-size: 2.64706em
+    font-size: 2.25em
+  }
+  h1.tag {
+    margin-top: -0.7em;
+    margin-bottom: 1em;
   }
 }
 
@@ -44,7 +52,7 @@ h2, .h2 {
 .no-margin-top {
   margin-top: .75em;
 }
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   h2, .h2 {
     font-size: 1.76471em;
     margin: 2.5em 0 .4em;
@@ -159,10 +167,6 @@ a:hover {
   color: #606060;
   -webkit-transition: border .1s color .3s linear;
   -moz-transition: border, color .4s;
-}
-
-a:focus {
-  outline: thin dotted;
 }
 
 abbr[title] {
@@ -368,7 +372,7 @@ header {
   background-color: rgba(255, 255, 255, 0.95);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   header {
     margin-bottom: 0;
   }
@@ -394,7 +398,7 @@ header:after {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .no-touch header {
     position: fixed;
   }
@@ -408,7 +412,7 @@ header:after {
   font-family: Klavika, "Open Sans", "Helvetica Neue", Arial, san-serif;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .logo {
     float: left;
   }
@@ -447,7 +451,7 @@ header:after {
   transition: left .7s cubic-bezier(0.265,0.4,0.52,1.01), opacity .7s cubic-bezier(0.265,0.4,0.52,1.01);
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .logo__main {
     font-size: .66667em;
   }
@@ -466,7 +470,7 @@ header:after {
   text-transform: uppercase;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .nav--main {
     float: right;
     margin: 1em 0;
@@ -478,7 +482,7 @@ header:after {
   margin: 0 1.5em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .nav--main > li {
     display: inline-block;
     margin: 0;
@@ -501,7 +505,7 @@ header:after {
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .nav--link {
     font-size: 1em;
     line-height: 1em;
@@ -525,10 +529,13 @@ header:after {
 
   .nav--link:hover {
     color: #00467f;
-    text-decoration: none;
   }
 
   .nav--link:hover:before { max-width: 100%; }
+}
+
+.nav--link:hover {
+  text-decoration: none;
 }
 
 .current > .nav--link:before { max-width: 100%; }
@@ -549,9 +556,11 @@ header:after {
 
 .reg:after {
   /* Coming soon text */
-  /*content: "coming soon";*/
+  content: "coming soon";
   position: absolute;
-  left: 3em;
+  top: 0em;
+  left: 4.5em;
+  background:rgba(255,255,255,0.75);
   padding: 0 2px;
   white-space: nowrap;
   -webkit-transform: rotate(30deg);
@@ -574,7 +583,7 @@ header:after {
   background-color: #f5faf9;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .banner {
     display: block;
     background-size: cover;
@@ -584,7 +593,7 @@ header:after {
 
 .banner__main { display: none; }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .banner__date { display: none; }
 }
 
@@ -601,7 +610,7 @@ header:after {
   background-color: #2b4459;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .intro {
     background-size: cover;
     background-position: center center;
@@ -614,33 +623,46 @@ header:after {
 }
 
 .intro__desc, .intro__reg {
-  font-size: 1.41176em;
+  font-size: 1.25em;
   font-weight: 300;
   color: white;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .intro__desc, .intro__reg {
-    font-size: 1.76471em;
+    font-size: 1.5em;
   }
 }
 
+.mainbutton, .mainbutton:hover {
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+}
+
 .intro__reg {
-  padding: .5em;
+  font-size: 1.2em;
+  margin-top: 0.5em;
+  padding: 15px 45px;
   -webkit-transition: .3s;
   -moz-transition: .3s;
   transition: .3s;
 }
 
 .intro__reg:hover {
-  color: #00467f;
+  color: #3e9df7;
+  background-color: #fff;
+  text-decoration: none;
 }
 
 .intro__reg:after {
-  left: 91%;
-  top: .5em;
+  left: 86%;
+  top: 0em;
   margin-left: -3em;
+  font-size: 0.65em;
   color: white;
+  font-weight: normal;
+  background: rgba(43, 68, 89, 0.75);
   border: 2px solid white;
 }
 
@@ -649,19 +671,19 @@ header:after {
   background-color: #eef7fa;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .schedule {
     padding: 2em 0 3em;
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .schedule {
     padding: 3.25em 0 3em;
   }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .schedule__column {
     float: left;
     margin-left: 2.12766%;
@@ -692,7 +714,7 @@ header:after {
   text-align: center;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .schedule caption {
     font-size: 2.64706em;
   }
@@ -760,14 +782,14 @@ header:after {
   font-size: 1.5em;
   display: none;
   right: 10px;
-  top: 10px;
+  top: 6px;
   font-family: FontAwesome;
   -webkit-transition: .4s;
   -moz-transition: .4s;
   transition: .4s;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .marker { display: block; }
 }
 
@@ -817,7 +839,7 @@ header:after {
   font-weight: 300;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .session__desc { display: none; }
 }
 
@@ -840,7 +862,7 @@ header:after {
   margin: 1em 0;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .speaker { margin: 2em 4em; }
 }
 
@@ -1017,10 +1039,9 @@ header:after {
 
 .hack-week h2 {
   margin: 0 auto;
-  max-width: 31em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .hack-week h2 {
     margin: 1.5em auto 0;
   }
@@ -1029,7 +1050,7 @@ header:after {
 .hack-week .layout--page .desc {
   text-align: center;
   margin-bottom: 20px;
-  width: 750px;
+  max-width: 750px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1064,6 +1085,11 @@ header:after {
   font-size: 1.76471em;
   text-transform: uppercase;
 }
+.footer__reg:hover {
+  color: #3e9df7;
+  background-color: #fff;
+  text-decoration: none;
+}
 
 @media (min-width: 715px) {
   .footer__reg {
@@ -1072,8 +1098,8 @@ header:after {
 }
 
 .footer__reg:after {
-  left: 6em;
-  top: 1.55em;
+  left: 10.5em;
+  top: .25em;
   -webkit-transform: rotate(25deg);
   -moz-transform: rotate(25deg);
   -ms-transform: rotate(25deg);
@@ -1098,32 +1124,37 @@ header:after {
     font-size: 5.88235em;
     color: #96f2f1;
   }
+  .footer__logo img {
+    margin-bottom: 20px;
+    height: 100px;
+  }
 }
 
 .footer__title {
   text-transform: uppercase;
+  margin-top: .5em;
   font-size: 2.11765em;
   line-height: .7em;
   color: #3e9df7;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .footer__title {
     display: inline-block;
     font-size: 3em;
     text-align: left;
-    padding: .6em 0;
+    padding: 0;
   }
 }
 
 .footer__date {
   display: block;
-  margin-top: .5em;
+  margin-top: .75em;
   font-size: .47222em;
   color: #f5faf9;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .footer__date {
     margin: 1em 0 0 .1em;
     font-size: .35294em;
@@ -1141,7 +1172,7 @@ header:after {
   color: #6e899f;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .closure__copy {
     float: left;
     font-size: 1em;
@@ -1153,7 +1184,7 @@ header:after {
   margin: 0 0 1em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .social {
     float: right;
     margin: 0;
@@ -1182,25 +1213,22 @@ header:after {
   transition: .3s;
 }
 
+.email:hover {
+  background-color: #cd6041;
+}
+
+.facebook:hover {
+  background-color: #3b5998;
+}
+
 .github:hover {
-  background-color: #3e5b98;
+  background-color: #333333;
 }
 
 .twitter:hover {
   background-color: #32c2f2;
 }
 
-.email:hover {
-  background-color: #cd6041;
-}
-
-.blog:hover {
-  background-color: #f3901d;
-}
-
-.linkedin:hover {
-  background-color: #3098b6;
-}
 
 .visionary {
   display: inline-block;
@@ -1237,7 +1265,7 @@ header:after {
   height: 1.1em;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .heading--gradient {
     margin: 0 auto;
     font-size: 2.64706em;
@@ -1268,7 +1296,7 @@ header:after {
   height: 20%;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 695px) {
   .session-video {
     width: 500px;
     height: 300px;
@@ -1434,7 +1462,7 @@ box-shadow: 0 0 10px rgba(0,0,0,.5);
   }
 }
 
-@media(min-width: 600px) {
+@media(min-width: 695px) {
   .sponsor-info {
     padding-top: 100px;
   }
