--- a/views/fullpage.erb
+++ b/views/fullpage.erb
@@ -9,15 +9,18 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
 <link rel="stylesheet" type="text/css" href="/bower_components/fontawesome/css/font-awesome.min.css">
-
 <script src="/bower_components/modernizr/modernizr.js"></script>
-</head>
-<body>
-<!--[if lt IE 9]>
-  <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-<![endif]-->
 
-<div class="page">
+<style>
+html, body {
+    height: 100%;
+}
+</style>
+</head>
+
+<body>
+<div class="page" style="height: 100%;">
+
   <header class="on">
     <div class="layout--page">
       <a class="logo" href="/#">
@@ -28,49 +31,16 @@
           <li class=""><a class="nav--link" href="/#companies" data-text="SPONSORS">Sponsors</a></li>
           <li class=""><a class="nav--link" href="/#team" data-text="TEAM">Team</a></li>
           <li class=""><a class="nav--link" href="/#hack-week" data-text="HACK WEEK">Hack Week</a></li>
-          <li><a style="cursor: pointer;" class="nav--link reg">Register</a></li>
+          <li><a href="#" class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
   </header>
+
   <%= yield %>
-  <footer class="footer">
-    <div class="layout--page">
-      <div class="footer__details">
-        <div class="footer__logo">
-          <img src="img/logo.png">
-        </div>
-        <div class="footer__title">
-          5C Hackathon
-          <span class="footer__date">
-            November 11, 2016 &nbsp; &nbsp; Pomona College
-          </span>
-        </div>
-      </div>
-      <a style="cursor: pointer;" class="footer__reg reg">Register</a>
-    </div>
-    <div class="closure">
-      <div class="layout--page">
-        <div class="social">
-          <a class="social__link email" href="mailto:5chackathon@gmail.com">
-            <i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span>
-          </a>
-          <a target="_blank" class="social__link facebook" href="http://www.facebook.com/5CHackathon">
-            <i class="fa fa-facebook"></i><span class="visuallyhidden">Facebook</span>
-          </a>
-          <a class="social__link github" href="https://github.com/5CHackathon">
-            <i class="fa fa-github"></i><span class="visuallyhidden">GitHub</span>
-          </a>
-          <a target="_blank" class="social__link twitter" href="http://twitter.com/5CHackathon">
-            <i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span>
-          </a>
-        </div>
-        <span class="closure__copy">&copy; 2016 5C Hackathon</span>
-      </div>
-    </div>
-  </footer>
+
 </div>
-<div class="visionary__overlay"></div>
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -105,5 +75,6 @@ if ($(window).width() > 600) {
     });
 }
 </script>
+
 </body>
 </html>
