--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,8 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <caption>Fall 2016 Schedule</caption>
+    <div class="caption">Fall 2016 Schedule</div>
+    <h4 style="text-align: center; margin-top: -.5em; margin-bottom: 1em;">November 11&ndash;12, 2016</h4>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
@@ -57,7 +58,8 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>Sponsors</h1>
+  <h1 style="margin-bottom: 0.25em;">Spring 2016 Sponsors</h1>
+  <h3 style="margin-top: -1em;">(Fall 2016 sponsors will be announced shortly!)</h3>
 
   <p>
     <h5 style="color: #000;">
@@ -67,21 +69,21 @@
 
   <h3>Platinum</h3>
   <div class="logos sponsors">
-    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.jpg" alt="Proofpoint" style="height: 130px; width: auto;"/></a>
+    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.jpg" height="130" alt="Proofpoint"></a>
   </div>
 
   <h3>Gold</h3>
   <div class="logos sponsors">
-    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="65" alt="Intuit"></a>
-
-    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="85" alt="Google"></a>
+    <a href="http://www.intuit.com/"><img src="img/sponsors/intuit.png" height="60" alt="Intuit"></a>
+    <a href="http://www.meraki.com/"><img src="img/sponsors/past/meraki.png" height="70" alt="Cisco Meraki"></a>
+    <a href="http://www.google.com/"><img src="img/sponsors/google.png" height="70" alt="Google"></a>
   </div>
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <a href="http://a16z.com/"><img src="img/sponsors/a16z.png" height="45" alt="Andreessen Horowitz"></a>
+    <a href="http://www.yelp.com/"><img src="img/sponsors/past/yelp.png" height="90" alt="Yelp"></a>
 
-    <a href="http://laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="45" alt="Laserfiche"></a>
+    <a href="http://laserfiche.com/"><img src="img/sponsors/laserfiche.png" height="50" alt="Laserfiche"></a>
   </div>
 </section>
 
