--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,6 @@
   <div class="banner">
     <img class="banner__img" src="img/background-thin.png" alt="5C Hackathon">
     <span class="banner__main">5C Hackathon</span>
-    <span class="banner__date">November 11, 2016 &nbsp; &nbsp; Claremont, CA</span>
   </div>
   <div class="intro">
     <div class="layout--page">
@@ -69,7 +68,7 @@
 
   <h3>Platinum</h3>
   <div class="logos sponsors">
-    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.jpg" height="130" alt="Proofpoint"></a>
+    <a href="http://www.proofpoint.com/"><img src="img/sponsors/proofpoint.png" height="90" alt="Proofpoint" style="min-width:492px;"></a>
   </div>
 
   <h3>Gold</h3>
@@ -155,7 +154,7 @@
         <div class="session">
           <h4 class="session__title">Be Open</h4>
           <div class="session__desc">
-            <p>We welcome attendees from all backgrounds and skill levels &ndash; from &ldquo;never been to hackathon before&rdquo; to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
+            <p>We welcome attendees from all backgrounds and skill levels &ndash; from &ldquo;never been to a hackathon before&rdquo; to seasoned developers. This event is about increasing innovation, partnership, and engagement in the technical community on campus.</p>
           </div>
           <b class="marker"></b>
         </div>
