correcting info on sponsor page

--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -27,7 +27,7 @@
       </p>
 
       <p class="sponsor__info">
-        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a>, and we'll work out the details.</p>
+        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:5chackathon@gmail.com">5chackathon@gmail.com</a> and we'll work out the details.</p>
     </div>
   </div>
   </section>
@@ -45,9 +45,9 @@
             </div>
             <ul class="list-group">
               <li class="list-group-item">Swag distribution</li>
-              <li class="list-group-item">API or developer tools featured on the event website, if applicable</li>
-              <li class="list-group-item">Organization name, logo, and bio on the event website</li>
-              <li class="list-group-item">Opportunity to send one recruiter/company representative</li>
+              <li class="list-group-item">Send engineers &amp; recruiters</li>
+              <li class="list-group-item">Mention of API/developer tools upon request</li>
+              <li class="list-group-item">Logo on website, T-shirts, poster</li>
             </ul>
           </div>
         </div>
@@ -60,9 +60,11 @@
               <h3 class="panel-title price">$2000</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item"><strong>Everything in Bronze</strong></li>
-              <li class="list-group-item">'A few words from our sponsor' at the Hackathon kickoff</li>
-              <li class="list-group-item">Placement of logo on official event T-shirts</li>
+              <li class="list-group-item">Speak at opening ceremony</li>
+              <li class="list-group-item">Swag distribution</li>
+              <li class="list-group-item">Send engineers &amp; recruiters</li>
+              <li class="list-group-item">Mention of API/developer tools upon request</li>
+              <li class="list-group-item">Logo on website, T-shirts, poster</li>
             </ul>
           </div>
         </div>
@@ -75,9 +77,12 @@
               <h3 class="panel-title price">$3000</h3>
             </div>
             <ul class="list-group">
-              <li class="list-group-item"><strong>Everything in Silver</strong></li>
-              <li class="list-group-item">Post-event access to participant resume database</li>
-              <li class="list-group-item">Brief paragraph about company on the event website</li>
+              <li class="list-group-item">Access to participant resume database</li>
+              <li class="list-group-item">Speak at opening ceremony</li>
+              <li class="list-group-item">Swag distribution</li>
+              <li class="list-group-item">Send engineers &amp; recruiters</li>
+              <li class="list-group-item">Mention of API/developer tools upon request</li>
+              <li class="list-group-item">Logo on website, T-shirts, poster</li>
             </ul>
           </div>
         </div>
@@ -88,12 +93,11 @@
             </div>
             <div class="panel-body">
               <h3 class="panel-title price">$5000</h3>
-              <div>Limit 1</div>
+              <div>Limit: 1</div>
             </div>
             <ul class="list-group">
               <li class="list-group-item"><strong>Everything in Gold</strong></li>
-              <li class="list-group-item">The 5C Hackathon, presented by&hellip;</li>
-              <li class="list-group-item">Special placement of logo in all event flyers, posters, e-mails, and slides</li>
+              <li class="list-group-item">5C Hackathon presented by [you]</li>
               <li class="list-group-item">Special placement of logo on official event T-shirts</li>
             </ul>
           </div>
